update swagger for author
